[workspace]
[package]
version = "0.1.0"
name = "helios-prover-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
helios-prover-primitives = { path = "../primitives/" }
hex-literal = "0.4.1"
eyre = "0.6.8"
sha2 = "0.9.8"
ssz_rs = { version = "0.9.0", features = ["serde"] }
serde_json = "1.0.111"
hex = "0.4.3"
serde_with = { version = "3.4.0", features = ["hex"] }
serde = { version = "1.0.195", features = ["derive"] }
alloy-primitives = "0.6.0"

[patch.crates-io]
# Patch sha2 so we can use sha precompiles
sha2-v0-9-8 = { git = "https://github.com/succinctbot/RustCrypto-hashes.git", package = "sha2", branch = "v0.9.8" }
