[workspace]
[package]
version = "0.1.0"
name = "helios-prover-script"
edition = "2021"

[dependencies]
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
helios = { git = "https://github.com/brozorec/helios.git" }
helios-prover-primitives = { path = "../primitives" }
ethers = "2.0.11"
eyre = "0.6.8"
hex = "0.4.3"
async-trait = "0.1.57"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.111"
ssz_rs = "0.9.0"
