[workspace]
[package]
version = "0.1.0"
name = "helios-prover-script"
edition = "2021"

[dependencies]
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
helios = { git = "https://github.com/brozorec/helios.git" }
milagro_bls = { package = "snowbridge-milagro-bls", git = "https://github.com/Snowfork/milagro_bls", rev = "6a95c9e33c6a41d9137761e593d53742ebb964de" }
helios-prover-primitives = { path = "../primitives" }
ethers = "2.0.11"
eyre = "0.6.8"
hex = "0.4.3"
async-trait = "0.1.57"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.111"
ssz_rs = "0.9.0"
bls12_381-bls = "0.2.0"
dusk-bytes = "0.1.7"
dusk-bls12_381 = "0.13.0"
